# vdb-rag-service

./: .gitignore  README.md  README.ru.md  docker-compose.yml
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
client/src/api/: index.js
client/src/components/: ChatTab.css  ChatTab.jsx  DocumentsTab.css  DocumentsTab.jsx
client/src/hooks/: useChat.js  useDocuments.js
server/: Dockerfile  main.py  pyproject.toml
server/app/: __init__.py
server/app/api_v1/: __init__.py
server/app/api_v1/endpoints/: chat.py  documents.py  search.py
server/app/core/: config.py  logger.py
server/app/engine/: document_processor.py  embedding_service.py  llm_service.py  weaviate_client.py
